--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
   "license": "MIT",
   "dependencies": {
     "async-sema": "^3.1.1",
+    "bootstrap-icons": "^1.8.3",
     "canvas": "^2.8.0",
     "commander": "^9.0.0",
     "dotenv": "^16.0.0",
